[project]
name = "projeto-agent-doc"
version = "0.1.0"
description = ""
authors = [
    {name = "bebaran",email = "leandro.filho@sou.inteli.edu.br"}
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "black (>=25.1.0,<26.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "requests (>=2.32.4,<3.0.0)",
    "poetry-plugin-dotenv (>=3.0.1,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
